...

    },
    "-" : {

    },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bag"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Taška"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Confirm"
          }
        },
...
      }
    },
    "Current" : {
      "localizations" : {
        "sk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aktuálne"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete Trip ?"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vymazať výlet ?"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Edit Name"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zmeniť meno"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "History is Empty"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "História je prázdna"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add a trip to see details"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pridaj si výlet aby si videl viac"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enable Notifications"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Povoliť notifikácie"
          }
        }
...
      }
    },
    "Enter trip" : {
      "localizations" : {
        "sk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zadaj názov"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enter your name"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zadaj svoje meno"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "History:"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "História:"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Historia"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Item"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Položka"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Change Language"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zmeniť jazyk"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "My Bags:"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tašky:"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "My Trips:"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Moje Výlety:"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Please enter a bag name"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Žiadny nakup"
          }
        }
      }
    },
    "No upcoming trips" : {
      "localizations" : {
        "sk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Žiadny planovaný výlet"
          }
        }
      }
    },
    "Not cooking today" : {
      "localizations" : {
        "sk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nič dnes nevarím"
          }
        }
...
      }
    },
    "OK" : {

    },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Packing"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Balenie"
          }
        }
...
      }
    },
    "Plants" : {
      "localizations" : {
        "sk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kvety"
          }
        }
...
      }
    },
    "Recipes" : {
      "localizations" : {
        "sk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Recepty"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Remove Bag ?"
          }
        },
...
      }
    },
    "Shopping" : {
      "localizations" : {
        "sk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nakupovanie"
          }
        }
...
      }
    },
    "Today" : {
      "localizations" : {
        "sk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dnes"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Welcome"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vitaj"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Yes"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ano"
          }
        }
...
