...
    @FocusState private var nameIsFocused: Bool


    var body: some View {

        VStack(alignment: .center, spacing: 0) {
            Image(colorScheme == .dark ? "WelcomeLogoLight" : "WelcomeLogoDark")
                .resizable()
             
                .frame(width: 250, height: 250)
                .padding(.top, 20)
            Text(LocalizedStringKey("welcome"))
                .font(.system(size: 60))
...
                .padding(.bottom,30)

            Button {
                UserDefaults.standard.set(name, forKey: "userName")
                UserDefaults.standard.set(true, forKey: "isWelcomeScreenOver")
            } label: {
                Image(systemName: "arrow.down.circle")
                    .renderingMode(.original)
                    .resizable()
                    .frame(width: 120, height: 120)
                    .foregroundStyle(
                        Color(colorScheme == .dark ? .white : .black))

...
                        NavigationLink {
                            SettingsView()
                            
                            
                            
                        } label: {
                            Image(systemName: "slider.vertical.3")
                                .font(.title)
                                .foregroundStyle(Utils.textColor(colorScheme))
                                .fontWeight(.bold)
                        }
                    }
                    ToolbarItem(placement: .principal) {
...
