...
            }
        } .toolbar {
            ToolbarItem(placement: .navigationBarLeading) {
                Button {
 dismiss()
                } label: {
                    Image(systemName: "chevron.backward")
                        .font(.title2)
                        .fontWeight(.bold)
                        .foregroundStyle(Color(hex: "FEFAE0"))
                    
                }.frame(height: 50)
            }
...
                                bagName = ""
                            }
                        }
                        
                        
                    } label: {
                        Image(systemName: "plus")
                            .foregroundStyle(.white)
                            .padding(10)
                            .background(.orange)
                            .clipShape(.rect(cornerRadius: 10))
                        
                    }
...
                    .font(.title2)
                Spacer()
                if !historyView {
                    Button {
                        bag.removeItem(a: item)
                    } label: {
                        Image(systemName: "x.circle")
                            .fontWeight(.bold)
                            .foregroundStyle(  Color(hex: "22577A"))
                            .font(.title2)
                    }
                }
                
...
