...
        isChecked.toggle()
    }
    
    var marker:String  {
        switch isChecked {
            case true:
            return "checkmark"
        case false:
            return "square"
        
        }
    }
    func setName(a:String){
        self.name = name
    }
...
